--- a/style/style.css
+++ b/style/style.css
@@ -3,9 +3,9 @@
 }
 /* Colors */
 #main {
-    background: linear-gradient(to right,
+    background: linear-gradient(to bottom,
      rgba(155, 89, 182,1.0),
-     rgba(246, 253, 118,1.0));
+     rgba(46, 204, 113,1.0));
     color: #000;
     font-family:
     -apple-system, 
